# on_growth_and_form

./: .gitignore  AGENTS.md  PROMPT_ACTION_LOG.md  README.md  mkdocs.yml  requirements-dev.txt  requirements.txt
background_context/: README.md
simulations/fire_poc/: README.md  WORKFLOW_BUILDOUT_2026-03-30.md  pyproject.toml
simulations/fire_poc/.mplcache/: fontlist-v390.json
simulations/fire_poc/notebooks/: elmfire_earth2_poc.ipynb
simulations/fire_poc/outputs/demo/: forcing.json  pipeline_status.json
simulations/fire_poc/outputs/demo_earth2_live/: pipeline_status.json
simulations/fire_poc/outputs/demo_earth2_real_elmfire_attempt/: pipeline_status.json
simulations/fire_poc/outputs/demo_earth2_real_elmfire_attempt2/: pipeline_status.json
simulations/fire_poc/outputs/demo_earth2_real_elmfire_attempt3/: pipeline_status.json
simulations/fire_poc/outputs/demo_earth2_real_elmfire_attempt4/: pipeline_status.json
simulations/fire_poc/outputs/demo_earth2_real_elmfire_attempt5/: pipeline_status.json
simulations/fire_poc/outputs/demo_earth2_real_elmfire_attempt6/: forcing.json  pipeline_status.json
simulations/fire_poc/outputs/demo_earth2_real_elmfire_attempt7/: pipeline_status.json
simulations/fire_poc/outputs/demo_earth2_with_missing_elmfire/: pipeline_status.json
simulations/fire_poc/outputs/earth2_real_repo/: pipeline_status.json
simulations/fire_poc/outputs/extreme_panel/: extreme_conditions_panel_status.json
simulations/fire_poc/tests/: conftest.py  test_case_writer.py  test_geometry.py  test_mock_pipeline.py  test_plotting_metrics.py
(+403 files in other folders)
